--- a/pages/Success.html
+++ b/pages/Success.html
@@ -4,10 +4,14 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>P-Ticket/success</title>
-      <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
       <script src="https://cdn.tailwindcss.com"></script>
-      <link rel="stylesheet" href="style.css">
-      <link rel="stylesheet" href="fontFace.css">
+      <style>
+        .click-button:hover{
+            background-color: black;
+            color: white;
+            border: 0;
+        }
+      </style>
     
    </head>
    <body >
@@ -18,7 +22,7 @@
             <h2 class="roboto-bold text-xl font-normal text-center text-[#4a4a4a] mb-5 font-semibold">Thank you for Booking Our Bus Seats. <br>
                 We are working hard to find the best service and deals for you.</h2>
                 <p class=" text-lg font-light roboto-thin text-[#4a4a4a] block text-center mb-5">Shortly you will find a confirmation in your email.</p>
-<button id="Continue" onclick="homepage()" class="m-auto block uppercase roboto-bold text-white btn w-72 h-12 rounded-full bg-[#27AE60]">
+<button id="Continue" onclick="homepage()" class="click-button m-auto block uppercase roboto-bold text-white btn w-72 h-12 rounded-full bg-[#27AE60]">
     Continue
 </button>
         </div>
